@@ -55,6 +55,15 @@ void EvtCBTo3piMPP::init(){
   checkSpinDaughter(1,EvtSpinType::SCALAR);
   checkSpinDaughter(2,EvtSpinType::SCALAR);
 
+  EvtVector4R p4[3];
+  double alpha = getArg(0);
+
+  int iset(10000);  
+  double realA, imgA, realbarA, imgbarA;
+
+  generator.Evt3piMPP(alpha, iset, p4[0], p4[1], p4[2], 
+		      realA, imgA, realbarA, imgbarA);
+
 }
 
 void EvtCBTo3piMPP::initProbMax(){
@@ -79,22 +88,11 @@ void EvtCBTo3piMPP::decay( EvtParticle *p ){
   EvtVector4R p4[3];
   double alpha = getArg(0);
 
-  int iset;
-
-  static int first=1;
-
-  if (first==1) {
-    iset=10000;
-    first=0;
-  }
-  else{
-    iset=0;
-  }
-
+  int iset(0);
   double realA,imgA,realbarA,imgbarA;
 
   generator.Evt3piMPP(alpha, iset, p4[0], p4[1], p4[2],
-                  realA, imgA, realbarA, imgbarA);
+		      realA, imgA, realbarA, imgbarA);
 
   pi1->init( getDaug(0), p4[0] );
   pi2->init( getDaug(1), p4[1] );
